--- a/service/templates/index.html
+++ b/service/templates/index.html
@@ -3,7 +3,7 @@
 {% block "content" %}
     <h1>Auto service</h1>
     <p>Welcome to the Car Heaven!</p>
-    <p>Currently we have:</p>
+    <p>Currently, we have:</p>
     <ul>
         <li><strong>Cars:</strong> {{ num_cars }}</li>
         <li><strong>Models:</strong> {{ num_models }}</li>
