[Problem P29] Use "title" block correctly, and do not use quotes in template block names.

--- a/service/templates/index.html
+++ b/service/templates/index.html
@@ -1,6 +1,8 @@
 {% extends "base.html" %}
 
-{% block "content" %}
+{% block title %}Car Heaven{% endblock %}
+
+{% block content %}
 <h1>Auto service</h1>
 <p>Welcome to the Car Heaven!</p>
 <p>Currently, we have:</p>
