--- a/service/templates/base.html
+++ b/service/templates/base.html
@@ -1,9 +1,9 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    {% block "title" %}<title>Biblioteka</title>{% endblock %}
-    <meta charset="utf-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <title>{% block title %}{% endblock %}</title>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="wihttp://localhost:3000/dth=device-width, initial-scale=1">
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css"
           integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO" crossorigin="anonymous">
     <!-- Add additional CSS in static file -->
@@ -20,7 +20,7 @@
                 </ul>
             {% endblock %}
         </div>
-        <div class="col-sm-10 ">{% block "content" %}{% endblock %}</div>
+        <div class="col-sm-10 ">{% block content %}{% endblock %}</div>
     </div>
 </div>
 </body>
