[Problem P29] Add the newest Bootstrap and use the same navigation bar as in Flask projects.

--- a/service/templates/index.html
+++ b/service/templates/index.html
@@ -3,8 +3,8 @@
 {% block title %}Car Heaven{% endblock %}
 
 {% block content %}
-<h1>Auto service</h1>
-<p>Welcome to the Car Heaven!</p>
+<h2>Auto service</h2>
+<p>Welcome to the <strong>Car Heaven</strong>!</p>
 <p>Currently, we have:</p>
 <ul>
     <li><strong>Cars:</strong> {{ num_cars }}</li>
