--- a/service/templates/base.html
+++ b/service/templates/base.html
@@ -25,6 +25,9 @@
                 <li class="nav-item">
                     <a class="nav-link active" aria-current="page" href="{% url 'index' %}">About</a>
                 </li>
+                <li class="nav-item">
+                    <a class="nav-link active" aria-current="page" href="{% url 'cars' %}">Cars</a>
+                </li>
             </ul>
         </div>
     </div>
