--- a/service/templates/car_details.html
+++ b/service/templates/car_details.html
@@ -1,6 +1,6 @@
 {% extends "base.html" %}
 
-{% block title %}Car{% endblock %}
+{% block title %}Car Details{% endblock %}
 
 {% block content %}
 <h2>{{ car.car_model }}</h2>
