--- a/service/templates/cars.html
+++ b/service/templates/cars.html
@@ -7,7 +7,7 @@
 <h5>The list of cars in our garage:</h5>
 <ul>
     {% for car in cars %}
-        <li><a href="{% url 'car' car.id %}">{{ car.car_model }}</a></li>
+        <li><a href="{% url 'car-details' car.id %}">{{ car.car_model }}</a></li>
     {% endfor %}
 </ul>
 {% endblock %}
