--- a/service/templates/base.html
+++ b/service/templates/base.html
@@ -28,6 +28,9 @@
                 <li class="nav-item">
                     <a class="nav-link active" aria-current="page" href="{% url 'cars' %}">Cars</a>
                 </li>
+                <li class="nav-item">
+                    <a class="nav-link active" aria-current="page" href="{% url 'services' %}">Services</a>
+                </li>
             </ul>
         </div>
     </div>
