[Problem P29] Add an app logo.

--- a/service/templates/base.html
+++ b/service/templates/base.html
@@ -18,7 +18,9 @@
 <!-- Navigation -->
 <nav class="navbar navbar-expand-lg bg-body-tertiary" data-bs-theme="light">
     <div class="container-fluid">
-        <a class="navbar-brand" href="{% url 'index' %}">Home</a>
+        <a class="navbar-brand" href="{% url 'index' %}">
+            <img src="{% static 'img/car_heaven_logo.png' %}" alt="Car Heaven Logo" width="50" height="50">
+            Car Heaven</a>
         <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent"
                 aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"></span>
