[Problem P29] Add hyperlinks to numbers in stats, update cars and car detail templates.

--- a/service/templates/cars.html
+++ b/service/templates/cars.html
@@ -4,10 +4,10 @@
 
 {% block content %}
 <h2>Cars</h2>
-<h5>The list of cars in our garage:</h5>
+<h5>The list of cars registered in our auto service:</h5>
 <ul>
     {% for car in cars %}
-        <li><a href="{% url 'car-details' car.id %}">{{ car.car_model }}</a></li>
+        <li><a href="{% url 'car-details' car.id %}">{{ car }}</a></li>
     {% endfor %}
 </ul>
 {% endblock %}
