--- a/service/templates/index.html
+++ b/service/templates/index.html
@@ -3,12 +3,12 @@
 {% block title %}Car Heaven{% endblock %}
 
 {% block content %}
-<h2>Auto service</h2>
-<p>Welcome to the <strong>Car Heaven</strong>!</p>
+<h3>Welcome to <strong>Car Heaven</strong>!</h3>
+<p>Grant your car a <strong>two-way</strong> ticket to heaven!</p>
 <p>Currently, we have:</p>
 <ul>
-    <li><strong>Cars:</strong> {{ num_cars }}</li>
-    <li><strong>Services available:</strong> {{ num_services }}</li>
-    <li><strong>Orders completed:</strong> {{ num_orders }}</li>
+    <li><strong>Cars in our garage:</strong> <a href="{% url 'cars' %}">{{ num_cars }}</a>
+    <li><strong>Services available:</strong> <a href="{% url 'services' %}">{{ num_services }}</a>
+    <li><strong>Orders completed:</strong> <a href="{% url 'index' %}">{{ num_orders }}</a>
 </ul>
 {% endblock %}
