--- a/service/templates/car_details.html
+++ b/service/templates/car_details.html
@@ -10,4 +10,7 @@
 <p><strong>VIN code:</strong> {{ car.vin_code }}</p>
 <p><strong>Year:</strong> {{ car.car_model.year }}</p>
 <p><strong>Engine type:</strong> {{ car.car_model.engine_type }}</p>
+<p><strong>Fuel type:</strong> {{ car.car_model.fuel_type }}</p>
+<p><strong>Description:</strong> {{ car.description }}</p>
+<p><strong>Model description:</strong> {{ car.car_model.description }}</p>
 {% endblock %}
