--- a/service/templates/index.html
+++ b/service/templates/index.html
@@ -11,4 +11,7 @@
     <li><strong>Services available:</strong> <a href="{% url 'services' %}">{{ num_services }}</a>
     <li><strong>Orders completed:</strong> <a href="{% url 'index' %}">{{ num_orders }}</a>
 </ul>
+<div class="container" style="display: inline-block; width: 75%">
+    {{ bar_chart|safe }}
+</div>
 {% endblock %}
