--- a/service/templates/base.html
+++ b/service/templates/base.html
@@ -36,6 +36,9 @@
                 <li class="nav-item">
                     <a class="nav-link active" aria-current="page" href="{% url 'services' %}">Services</a>
                 </li>
+                <li class="nav-item">
+                    <a class="nav-link active" aria-current="page" href="{% url 'orders' %}">Orders</a>
+                </li>
             </ul>
         </div>
     </div>
