[Problem P29] Make "price" of the order line be a calculated attribute as well. Also, use a simpler way to calculate "total_price" of the order.

--- a/service/templates/orders.html
+++ b/service/templates/orders.html
@@ -4,7 +4,7 @@
 
 {% block content %}
 <h2>Orders</h2>
-<h5>List of our orders:</h5>
+<h5>List of all our orders:</h5>
 {% if orders %}
 <ul>
     {% for order in orders %}
