--- a/service/templates/car_details.html
+++ b/service/templates/car_details.html
@@ -11,7 +11,7 @@
 <p><strong>Year: </strong>{{ car.car_model.year }}</p>
 <p><strong>Engine type: </strong>{{ car.car_model.engine_type }}</p>
 <p><strong>Fuel type: </strong>{{ car.car_model.fuel_type }}</p>
-<p><strong>Description: </strong>{{ car.description }}</p>
+<p><strong>Observations: </strong>{{ car.observations }}</p>
 <p><strong>Model description: </strong>{{ car.car_model.description }}</p>
 {% if car.orders.all %}
     <div class="container">
