--- a/service/templates/base.html
+++ b/service/templates/base.html
@@ -27,6 +27,13 @@
         </button>
         <div class="collapse navbar-collapse justify-content-end" id="navbarSupportedContent">
             <ul class="navbar-nav mb-2 mb-lg-0">
+                <li>
+                    <form action="{% url 'search-cars' %}" method="get">
+                        <label for="search-cars" hidden></label>
+                        <input type="search" id="search-cars" name="query" class="form-control"
+                               placeholder="Search cars">
+                    </form>
+                </li>
                 <li class="nav-item">
                     <a class="nav-link active" aria-current="page" href="{% url 'about' %}">About</a>
                 </li>
