[Problem P30] Add car photos functionality ("photo" field in Car model, MEDIA files in Django, changes in templates accordingly).

--- a/service/templates/car_details.html
+++ b/service/templates/car_details.html
@@ -3,6 +3,15 @@
 {% block title %}Car Details{% endblock %}
 
 {% block content %}
+{% load static %}
+<div class="container">
+    {% if car.photo %}
+        <img src="{{ car.photo.url }}" class="card-img-top" alt="car-photo">
+    {% else %}
+        <img src="{% static 'img/no_image.png' %}" class="card-img-top" alt="no-image">
+    {% endif %}
+</div>
+<br>
 <h2>{{ car.car_model.make }} {{ car.car_model.model }}</h2>
 <hr/>
 <p><strong>Client: </strong>{{ car.client_name }}</p>
