--- a/service/templates/cars.html
+++ b/service/templates/cars.html
@@ -3,14 +3,40 @@
 {% block title %}Cars{% endblock %}
 
 {% block content %}
+{% load static %}
 <h2>Cars</h2>
+<br>
 <h5>The list of cars registered in our auto service:</h5>
+<br>
 {% if cars %}
-    <ul>
+    <div class="row">
         {% for car in cars %}
-            <li><a href="{% url 'car-details' car.id %}">{{ car }}</a></li>
+            <div class="col-md-4 d-flex align-items-stretch">
+                <div class="card mb-4 shadow-sm">
+                    {% if car.photo %}
+                        <img src="{{ car.photo.url }}" class="card-img-top" alt="car-photo">
+                    {% else %}
+                        <img src="{% static 'img/no_image.png' %}" class="card-img-top" alt="no-image">
+                    {% endif %}
+                    <div class="card-body">
+                        <p class="card-text">
+                            <a href="{{ car.id }}">
+                                {{ car.car_model.make }} {{ car.car_model.model }} ({{ car.car_model.year }})
+                            </a>
+                        </p>
+                        <h6 class="card-subtitle mb-2 text-muted"></h6>
+                        <h6 class="card-subtitle mb-2 text-muted">
+                            {{ car.car_model.engine_type }}, {{ car.car_model.fuel_type }}</h6>
+                        <h6 class="card-subtitle mb-2 text-muted"></h6>
+                        <br>
+                        <h6 class="card-subtitle mb-2 text-muted">{{ car.license_plate_no }}</h6>
+                        <h6 class="card-subtitle mb-2 text-muted">{{ car.vin_code }}</h6>
+                        <h6 class="card-subtitle mb-2 text-muted">{{ car.client_name }}</h6>
+                    </div>
+                </div>
+            </div>
         {% endfor %}
-    </ul>
+    </div>
 {% else %}
     <p>There are no cars at the moment.</p>
 {% endif %}
