--- a/service/templates/index.html
+++ b/service/templates/index.html
@@ -14,4 +14,5 @@
 <div class="container" style="display: inline-block; width: 75%">
     {{ bar_chart|safe }}
 </div>
+<p>Your visits: {{ num_visits }}.</p>
 {% endblock %}
