--- a/service/templates/registration/logged_out.html
+++ b/service/templates/registration/logged_out.html
@@ -1,6 +1,6 @@
 {% extends "base.html" %}
 
-{% block title %}Signed out{% endblock %}
+{% block title %}Signed Out{% endblock %}
 
 {% block content %}
 <p>You have been successfully signed out.</p>
