--- a/service/templates/base.html
+++ b/service/templates/base.html
@@ -45,7 +45,7 @@
                 </li>
                 {% if user.is_authenticated %}
                     <li class="nav-item">
-                        <a class="nav-link" href="#">My orders</a>
+                        <a class="nav-link" href="{% url 'user-orders'%}">My orders</a>
                     </li>
                     <li class="nav-item">
                         <a class="nav-link" href="{% url 'logout' %}"> Sign out</a>
