--- a/service/templates/order_details.html
+++ b/service/templates/order_details.html
@@ -7,6 +7,10 @@
 <hr/>
 <p><strong>Status: </strong>{{ order.get_status_display }}</p>
 <p><strong>Date: </strong>{{ order.date }}</p>
+<p><strong>Return date: </strong>{{ order.deadline }}</p>
+<p class="text-{% if order.is_overdue %}danger{% else %}success{% endif %}"><strong>Is overdue: </strong>
+    {% if order.is_overdue %}Yes{% else %}No{% endif %}
+</p>
 <p><strong>Client: </strong>{{ order.car.client_name }}</p>
 <p><strong>Car: </strong><a href="{% url 'car-details' order.car.id %}">{{ order.car.car_model }}
     ({{ order.car.license_plate_no }}, {{ order.car.vin_code }})</a></p>
