--- a/service/templates/car_details.html
+++ b/service/templates/car_details.html
@@ -21,7 +21,7 @@
 <p><strong>Engine type: </strong>{{ car.car_model.engine_type }}</p>
 <p><strong>Fuel type: </strong>{{ car.car_model.fuel_type }}</p>
 <p><strong>Observations: </strong>{{ car.observations }}</p>
-<p><strong>Model description: </strong>{{ car.car_model.description }}</p>
+<p><strong>Model description: </strong>{{ car.car_model.description|safe }}</p>
 {% if car.orders.all %}
     <div class="container">
         <hr>
