--- a/service/templates/base.html
+++ b/service/templates/base.html
@@ -68,7 +68,7 @@
                         <a class="nav-link" href="{% url 'login' %}?next={{ request.path }}">Sign in</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="#">Sign up</a>
+                        <a class="nav-link" href="{% url 'register'%}">Sign up</a>
                     </li>
                 {% endif %}
             </ul>
