--- a/service/templates/registration/login.html
+++ b/service/templates/registration/login.html
@@ -3,28 +3,35 @@
 {% block title %}Sign In{% endblock %}
 
 {% block content %}
-{% if form.errors %}
-    <p>An error occurred while signing you in, please try again.</p>
-{% endif %}
-{% if next %}
-    {% if not user.is_authenticated %}
-        <p>You do not have access to this information. Please sign in.</p>
+<div class="container" style="display: inline-block; width: 70%">
+    <h2>Sign in</h2>
+    <br>
+    {% if form.errors %}
+        <p>An error occurred while signing you in, please try again.</p>
     {% endif %}
-{% endif %}
-<form method="post" action="{% url 'login' %}">
-    {% csrf_token %}
-    <table>
-        <tr>
-            <td>Username:</td>
-            <td>{{ form.username }}</td>
-        </tr>
-        <tr>
-            <td>Password:</td>
-            <td>{{ form.password }}</td>
-        </tr>
-    </table>
-    <input type="submit" value="Sign in"/>
-    <input type="hidden" name="next" value="{{ next }}"/>
-</form>
-<p><a href="{% url 'password_reset' %}">Forgot password?</a></p>
+    {% if next %}
+        {% if not user.is_authenticated %}
+            <p>You do not have access to this information. Please sign in.</p>
+        {% endif %}
+    {% endif %}
+    <form method="post" action="{% url 'login' %}">
+        {% csrf_token %}
+        <div class="form-group">
+            <label for="username">Username:</label>
+            <br>
+            {{ form.username }}
+        </div>
+        <br>
+        <div class="form-group">
+            <label for="password">Password:</label>
+            <br>
+            {{ form.password }}
+        </div>
+        <br>
+        <input type="submit" value="Sign in" class="btn btn-primary register-button"/>
+        <input type="hidden" name="next" value="{{ next }}"/>
+    </form>
+    <br>
+    <p><a href="{% url 'password_reset' %}">Forgot password?</a></p>
+</div>
 {% endblock %}
