--- a/service/templates/registration/logged_out.html
+++ b/service/templates/registration/logged_out.html
@@ -3,6 +3,9 @@
 {% block title %}Signed Out{% endblock %}
 
 {% block content %}
-<p>You have been successfully signed out.</p>
-<a href="{% url 'login' %}">Sign in again</a>
+<div class="container" style="display: inline-block; width: 70%">
+    <h5>You have been successfully signed out.</h5>
+    <br>
+    <a href="{% url 'login' %}">Sign in again</a>
+</div>
 {% endblock %}
