--- a/service/templates/registration/login.html
+++ b/service/templates/registration/login.html
@@ -23,7 +23,7 @@
             {{ form.password }}
         </div>
         <br>
-        <input type="submit" value="Sign in" class="btn btn-primary register-button"/>
+        <input type="submit" class="btn btn-primary" value="Sign in"/>
         <input type="hidden" name="next" value="{{ next }}"/>
     </form>
     <br>
