--- a/service/templates/registration/register.html
+++ b/service/templates/registration/register.html
@@ -33,7 +33,7 @@
             <input name="password2" type="password" class="form-control" id="password2" aria-describedby="pwd2Help">
         </div>
         <br>
-        <button type="submit" class="btn btn-primary register-button">Sign up</button>
+        <button type="submit" class="btn btn-primary">Sign up</button>
     </form>
     <br>
     <p>If you already have an account, <a href="{% url 'login' %}"><strong>sign in.</strong></a></p>
