[Problem P33] Add a little bit of style to password reset forms.

--- a/service/templates/registration/password_reset_complete.html
+++ b/service/templates/registration/password_reset_complete.html
@@ -3,6 +3,7 @@
 {% block title %}Reset Password{% endblock %}
 
 {% block content %}
-<h1>Password changed!</h1>
-<p><a href="{% url 'login' %}">Sign in</a></p>
+<h3>Password changed successfully!</h3>
+<br>
+<h5><a href="{% url 'login' %}">Sign in</a></h5>
 {% endblock %}
