--- a/service/templates/registration/password_reset_done.html
+++ b/service/templates/registration/password_reset_done.html
@@ -3,5 +3,7 @@
 {% block title %}Reset Password{% endblock %}
 
 {% block content %}
-<p>The email with the password reset link has been sent to you!</p>
+<h5>Check your inbox!</h5>
+<br>
+<p>The email with the password reset link has been sent to you.</p>
 {% endblock %}
