--- a/service/templates/registration/password_reset_form.html
+++ b/service/templates/registration/password_reset_form.html
@@ -8,8 +8,15 @@
     {% if form.email.errors %}
         {{ form.email.errors }}
     {% endif %}
-    <p>Forgot your password? Enter your email address below and we'll send you password reset instructions.</p>
-    <p>Email address: {{ form.email }}</p>
-    <input type="submit" class="btn btn-default btn-lg" value="Reset password">
+    <h5>Forgot your password?</h5>
+    <br>
+    <p>Enter your email address below and we'll send you password reset instructions.</p>
+    <div class="form-group">
+        <label for="id_email">Email:</label>
+        <br>
+        {{ form.email }}
+    </div>
+    <br>
+    <input type="submit" class="btn btn-primary" value="Reset password"/>
 </form>
 {% endblock %}
