[Problem P33] Render HTML in flash messages.

--- a/service/templates/base.html
+++ b/service/templates/base.html
@@ -81,7 +81,7 @@
         {% for msg in messages %}
             <div class="alert alert-{% if msg.tags == 'error' %}danger{% elif msg.tags == 'info' %}success{% endif %}"
                  role="alert">
-                {{ msg }}
+                {{ msg|safe }}
             </div>
         {% endfor %}
     {% endif %}
