[Problem P33] Implement comments funcionality, part 1: comments can only be added in Admin page.

--- a/service/templates/order_details.html
+++ b/service/templates/order_details.html
@@ -42,4 +42,18 @@
         </table>
     </div>
 {% endif %}
+<br>
+<br>
+<h3>Comments:</h3>
+<div class="container" style="display: inline-block; padding-top: 20px; padding-left: 20px; width: 80%">
+    {% if order.comments.all %}
+        {% for comment in order.comments.all %}
+            <strong>{{ comment.author }}</strong>, <em>{{ comment.date }}</em>
+            <p>{{ comment.text }}</p>
+            <hr>
+        {% endfor %}
+    {% else %}
+        <p>There are no comments for this order.</p>
+    {% endif %}
+</div>
 {% endblock %}
