--- a/service/templates/registration/login.html
+++ b/service/templates/registration/login.html
@@ -9,7 +9,7 @@
     {% if form.errors %}
         <p>An error occurred while signing you in, please try again.</p>
     {% endif %}
-    <form method="post" action="{% url 'login' %}">
+    <form action="{% url 'login' %}" method="post">
         {% csrf_token %}
         <div class="form-group">
             <label for="username">Username:</label>
