--- a/service/templates/base.html
+++ b/service/templates/base.html
@@ -65,7 +65,7 @@
                     </li>
                 {% else %}
                     <li class="nav-item">
-                        <a class="nav-link" href="{% url 'login' %}?next={{ request.path }}">Sign in</a>
+                        <a class="nav-link" href="{% url 'login' %}">Sign in</a>
                     </li>
                     <li class="nav-item">
                         <a class="nav-link" href="{% url 'register' %}">Sign up</a>
