[Problem P34] Use correct labels in login form (they point to IDs of input fields generated by Django built-in auth module).

--- a/service/templates/registration/login.html
+++ b/service/templates/registration/login.html
@@ -12,13 +12,13 @@
     <form action="{% url 'login' %}" method="post">
         {% csrf_token %}
         <div class="form-group">
-            <label for="username">Username:</label>
+            <label for="id_username">Username:</label>
             <br>
             {{ form.username }}
         </div>
         <br>
         <div class="form-group">
-            <label for="password">Password:</label>
+            <label for="id_password">Password:</label>
             <br>
             {{ form.password }}
         </div>
