[Problem P34] Very minor changes.

--- a/service/templates/registration/register_complete.html
+++ b/service/templates/registration/register_complete.html
@@ -5,5 +5,5 @@
 {% block content %}
 <h3>Success!</h3>
 <br>
-<h5>You can now <a href="{% url 'login' %}">sign in</a>.</h5>
+<h5>You can now <a href="{% url 'login' %}">Sign in</a>.</h5>
 {% endblock %}
