--- a/service/templates/registration/register.html
+++ b/service/templates/registration/register.html
@@ -42,6 +42,6 @@
             <button type="submit" class="btn btn-primary">Sign up</button>
         </form>
         <br>
-        <p>If you already have an account, <a href="{% url 'login' %}"><strong>sign in.</strong></a></p>
+        <p>If you already have an account, <a href="{% url 'login' %}"><strong>Sign in.</strong></a></p>
     </div>
 {% endblock %}
