--- a/service/templates/orders.html
+++ b/service/templates/orders.html
@@ -4,13 +4,47 @@
 
 {% block content %}
 <h2>Orders</h2>
-<h5>List of all our orders:</h5>
+<br>
+<h5>All our orders:</h5>
+<br>
 {% if orders %}
-    <ul>
+    <div class="row">
         {% for order in orders %}
-            <li>(Order ID: {{ order.id }}) <a href="{% url 'order-details' order.id %}">{{ order }}</a></li>
+            <div class="col-md-4 d-flex align-items-stretch">
+                <div class="card mb-4 shadow-sm">
+                    <div class="card-body">
+                        <p class="card-text">
+                            <a href="{% url 'order-details' order.id %}">
+                                {{ order.car.car_model.make }} {{ order.car.car_model.model }}
+                                ({{ order.car.car_model.year }}), {{ order.total_price }} €
+                            </a>
+                            <br>
+                            <a href="{% url 'order-details' order.id %}">ID: {{ order.id }}</a>
+                        </p>
+                        <h6 class="card-subtitle mb-2 text-muted"></h6>
+                        <h6 class="card-subtitle mb-2 text-muted">
+                            {{ order.car.client_name }} ({{ order.user.username }})
+                        </h6>
+                        <h6 class="card-subtitle mb-2 text-muted"></h6>
+                        <br>
+                        <h6 class="card-subtitle mb-2 text-muted">{{ order.car.license_plate_no }}</h6>
+                        <h6 class="card-subtitle mb-2 text-muted">{{ order.car.vin_code }}</h6>
+                        <h6 class="card-subtitle mb-2 text-muted">
+                            {{ order.car.car_model.engine_type }}, {{ order.car.car_model.fuel_type }}
+                        </h6>
+                        <br>
+                        <h6 class="card-subtitle mb-2 text-muted"></h6>
+                        <h6 class="card-subtitle mb-2 text-muted">From: {{ order.date|date:"Y-m-d" }}</h6>
+                        <h6 class="card-subtitle mb-2 text-muted">Until:
+                            <span class="text-{% if order.is_overdue %}danger{% else %}success{% endif %}">
+                            {{ order.deadline|date:"Y-m-d, H:i" }}
+                        </span>
+                        </h6>
+                    </div>
+                </div>
+            </div>
         {% endfor %}
-    </ul>
+    </div>
 {% else %}
     <p>There are no orders at the moment.</p>
 {% endif %}
