--- a/service/templates/cars.html
+++ b/service/templates/cars.html
@@ -6,7 +6,7 @@
 {% load static %}
 <h2>Cars</h2>
 <br>
-<h5>The list of cars registered in our auto service:</h5>
+<h5>Cars registered in our auto service:</h5>
 <br>
 {% if cars %}
     <div class="row">
@@ -26,7 +26,8 @@
                         </p>
                         <h6 class="card-subtitle mb-2 text-muted"></h6>
                         <h6 class="card-subtitle mb-2 text-muted">
-                            {{ car.car_model.engine_type }}, {{ car.car_model.fuel_type }}</h6>
+                            {{ car.car_model.engine_type }}, {{ car.car_model.fuel_type }}
+                        </h6>
                         <h6 class="card-subtitle mb-2 text-muted"></h6>
                         <br>
                         <h6 class="card-subtitle mb-2 text-muted">{{ car.license_plate_no }}</h6>
