--- a/service/templates/orders.html
+++ b/service/templates/orders.html
@@ -12,6 +12,7 @@
         {% for order in orders %}
             <div class="col-md-4 d-flex align-items-stretch">
                 <div class="card mb-4 shadow-sm">
+                    <img src="{{ order.user.profile.picture.url }}" class="card-img-top" alt="profile-picture">
                     <div class="card-body">
                         <p class="card-text">
                             <a href="{% url 'order-details' order.id %}">
