--- a/service/templates/base.html
+++ b/service/templates/base.html
@@ -44,17 +44,16 @@
                     <a class="nav-link active" aria-current="page" href="{% url 'orders' %}">Orders</a>
                 </li>
                 {% if user.is_authenticated %}
-                    <li class="nav-item">
-                        <a class="nav-link" href="{% url 'user-orders' %}">My orders</a>
-                    </li>
-                    <li class="nav-item">
-                        <a class="nav-link" href="{% url 'logout' %}"> Sign out</a>
-                    </li>
-                    <li class="nav-item">
-                        <a class="nav-link" href="{% url 'profile' %}">
-                            <img src="{{ user.profile.picture.url }}" alt="profile-picture" width="25" height="25">
+                    <li class="nav-item dropdown">
+                        <a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown"
+                           aria-expanded="false">
+                        <img src="{{ user.profile.picture.url }}" alt="profile-picture" width="25" height="25">
                             {{ user.get_username }}
                         </a>
+                        <ul class="dropdown-menu">
+                            <li><a class="dropdown-item" href="{% url 'user-orders' %}">My orders</a></li>
+                            <li><a class="dropdown-item" href="{% url 'logout' %}">Sign out</a></li>
+                        </ul>
                     </li>
                 {% else %}
                     <li class="nav-item">
