[Problem P34] Minor changes.

--- a/service/templates/user_orders.html
+++ b/service/templates/user_orders.html
@@ -1,11 +1,11 @@
 {% extends "base.html" %}
 
-{% block title %}My Orders{% endblock %}
+{% block title %}Your Orders{% endblock %}
 
 {% block content %}
-<h2>My orders</h2>
+<h2>Your orders</h2>
 <br>
-<h5>All my orders:</h5>
+<h5>All your orders:</h5>
 <br>
 {% if user_orders %}
     <div class="row">
