[Problem P35] Add missing "Create new order" button.

--- a/service/templates/user_orders.html
+++ b/service/templates/user_orders.html
@@ -7,6 +7,9 @@
 <br>
 <h5>All your orders:</h5>
 <br>
+<a class="btn btn-primary btn-sm mt-1 mb-1" href="{% url 'order-new' %}">New order</a>
+<br>
+<br>
 {% if user_orders %}
     <div class="row">
         {% for order in user_orders %}
