--- a/service/templates/order_details.html
+++ b/service/templates/order_details.html
@@ -5,6 +5,11 @@
 {% block content %}
 <h2>Order no {{ order.id }}:</h2>
 <hr/>
+{% if order.user == user %}
+<a class="btn btn-primary btn-sm mt-1 mb-1" href="{% url 'order-update' order.id %}">Edit order</a>
+<br>
+<br>
+{% endif %}
 <p><strong>Status: </strong>{{ order.get_status_display }}</p>
 <p><strong>Date: </strong>{{ order.date }}</p>
 <p><strong>Return date: </strong>{{ order.deadline }}</p>
