--- a/service/templates/order_details.html
+++ b/service/templates/order_details.html
@@ -7,6 +7,7 @@
 <hr/>
 {% if order.user == user %}
 <a class="btn btn-primary btn-sm mt-1 mb-1" href="{% url 'order-update' order.id %}">Edit order</a>
+<a class="btn btn-danger btn-sm mt-1 mb-1" href="{% url 'order-delete' order.id %}">Delete order</a>
 <br>
 <br>
 {% endif %}
