--- a/service/templates/order_details.html
+++ b/service/templates/order_details.html
@@ -41,10 +41,10 @@
                     <td>{{ line.price }} €</td>
                     <td>
                         {% if order.user == user %}
-                            <div>
-                                <a class="btn btn-danger btn-sm mt-1 mb-1"
-                                   href="{% url 'order-line-delete' order.id line.id %}">Delete</a>
-                            </div>
+                            <a class="btn btn-primary btn-sm mt-1 mb-1"
+                               href="{% url 'order-line-update' order.id line.id %}">Edit</a>
+                            <a class="btn btn-danger btn-sm mt-1 mb-1"
+                               href="{% url 'order-line-delete' order.id line.id %}">Delete</a>
                         {% endif %}
                     </td>
                 </tr>
