--- a/service/templates/base.html
+++ b/service/templates/base.html
@@ -44,6 +44,31 @@
                 <li class="nav-item">
                     <a class="nav-link active" aria-current="page" href="{% url 'orders' %}">Orders</a>
                 </li>
+                <li class="nav-item dropdown">
+                    <a class="nav-link" href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false">
+                        <img src="{% static 'img/lang.png' %}" alt="language-icon" width="25" height="25">
+                    </a>
+                    <ul class="dropdown-menu">
+                        <li>
+                            <form action="{% url 'set_language' %}" method="post">
+                                {% csrf_token %}
+                                <input name="next" type="hidden" value="{{ redirect_to }}"/>
+                                <label for="language">
+                                    {% get_available_languages as LANGUAGES %}
+                                    {% get_current_language as LANGUAGE_CODE %}
+                                    <select class="form-select" size={{ LANGUAGES|length }} name="language"
+                                            id="language" onchange="this.form.submit()">
+                                        {% for lang in LANGUAGES %}
+                                            <option value="{{ lang.0 }}"
+                                                    {% if LANGUAGE_CODE == lang.0 %}selected="selected"{% endif %}>
+                                                {{ lang.1 }}
+                                            </option>
+                                        {% endfor %}
+                                    </select>
+                                </label>
+                            </form>
+                    </ul>
+                </li>
                 {% if user.is_authenticated %}
                     <li class="nav-item dropdown">
                         <a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown"
